syntax="proto3";

package minknow_api.analysis_workflows;

option java_package = "com.nanoporetech.minknow_api";
option objc_class_prefix = "MKAPI";

import "minknow_api/rpc_options.proto";

service AnalysisWorkflowsService {
    rpc proxy (ProxyRequest) returns (stream ProxyResponse) {
        option (experimental) = true;
    }
}

message ProxyRequest {
    // with parameters but without the endpoint e.g.  for API /workflows/{id}/start:
    // "/workflows/ae088129-8767-460f-8795-7c04771dc42f/start"
    // "/workflows/epi2me-labs/wf-alignment/v1.2.8/start"
    string api = 1;

    enum Method {
        GET = 0;
        POST = 1;
        PUT = 2;
        DELETE = 3;
    }

    Method method = 2;

    map<string, string> headers = 4;
    string request_body = 3;
}

message ProxyResponse {
    uint32 status_code = 1;
    string response_body = 2;
}
